--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -24,6 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+* {
+  box-sizing: border-box;
+}
 body {
   width: 100%;
   height: auto;
